결제 모듈 구현 완료, DB 연동 확인 완료 localhost:8081/pay.html
결제내역 ID별로 구분하여 history API 구현 완료

ex)
http://localhost:8081/api/payment/history?userId=1

json으로 반환